--- a/app.json
+++ b/app.json
@@ -8,29 +8,43 @@
     "scheme": "myfirstapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "adaptiveIcon": {
+    "plugins": [
+      [
+        "react-native-google-mobile-ads",
+        {
+          "androidAppId": "ca-app-pub-9940591156853065~2074894729"
+        }
+      ],
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
+        }
+      ]
+    ],
+    "android": {
+      "package": "com.alexpandiyan1914.myfirstapp",
+      "adaptiveIcon": {
       "foregroundImage": "./assets/images/adaptive-icon.png",
       "backgroundColor": "#ffffff"
     },
     "edgeToEdgeEnabled": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "8aa623b5-5eb9-4f1a-bf92-6f4d03434ad6"
+      }
+    }
   },
   "web": {
     "bundler": "metro",
     "output": "static",
     "favicon": "./assets/images/favicon.png"
   },
-  "plugins": [
-    "expo-router",
-    [
-      "expo-splash-screen",
-      {
-        "image": "./assets/images/splash-icon.png",
-        "imageWidth": 200,
-        "resizeMode": "contain",
-        "backgroundColor": "#ffffff"
-      }
-    ]
-  ],
   "experiments": {
     "typedRoutes": true
   }
