--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,12 @@
     },
     "production": {
       "autoIncrement": true
+    },
+    "apk": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease",
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
